--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -15,7 +15,9 @@
 
 body {
     min-height: 100vh;
-    background: rgb(29, 29, 29) /*rgb(24, 23, 23)*/;
+    background: rgb(29, 29, 29)
+        /*rgb(24, 23, 23)*/
+    ;
     background-size: 600% 600%;
     /* Hacemos que el gradiente sea más grande para poder moverlo */
     color: white;
@@ -238,21 +240,10 @@ body {
 
 .botonAsist {
     grid-area: botonAsist;
-    display: grid;
-    grid-template-areas:
-        "botReg botSolicitud";
     width: 100%;
     justify-content: center;
     gap: 20px;
-}
-
-.botReg {
-    grid-area: botReg;
-
-}
-
-.botSolicitud {
-    grid-area: botSolicitud;
+    display: flex;
 }
 
 .buttonAsist {
@@ -263,14 +254,14 @@ body {
     padding: 10px;
     box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
     text-align: center;
+    display: grid;
+    grid-template-areas: "iconLogin textLogin";
+    width: 100%;
+    font-size: 20px;
+    cursor: pointer;
 }
 
-.botReg button:hover {
-    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(29, 46, 46));
-    color: rgb(3, 101, 140);
-}
-
-.botSolicitud button:hover {
+.botonAsist button:hover {
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(29, 46, 46));
     color: rgb(3, 101, 140);
 }
@@ -288,7 +279,7 @@ body {
     text-align: center;
 }
 
-.btnMonitoreodiv {
+#btnMonitoreo .btnUlt {
     width: 100%;
     height: 100%;
     background: none;
@@ -465,25 +456,32 @@ body {
     display: flex;
     filter: drop-shadow(1px 1px 15px rgba(42, 147, 189, 0.8));
 }
-#video-container, #video-container2{
+
+#video-container,
+#video-container2 {
     width: 100%;
     position: relative;
     display: none;
     justify-content: center;
     filter: drop-shadow(1px 1px 15px rgba(42, 147, 189, 0.8));
 }
-#robotGIF{
+
+#robotGIF {
     display: flex;
     clip-path: circle(50% at 50% 50%);
-    object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+    object-fit: cover;
+    /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
     width: 80%;
 }
-#robotGIFOjos{
+
+#robotGIFOjos {
     display: flex;
     clip-path: circle(50% at 50% 50%);
-    object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+    object-fit: cover;
+    /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
     width: 80%;
 }
+
 .mensajeIA {
     grid-area: mensajeIA;
     width: 80%;
@@ -586,16 +584,34 @@ body {
     height: 100%;
     color: white;
     padding: 10px 0px 10px 0px;
-    display: flex;
-    gap: 10px;
+    display: grid;
+    grid-template-areas: "iconDiagnostico textDiagnosticoDet";
+    grid-template-columns: 20% auto;
     align-items: center;
 
     .textDiagnosticoDet {
         text-align: center;
-        font-size: medium;
+        font-size: 18px;
+    }
+    .iconAnalisis{
+        font-size: 25px;
     }
 }
-
+#btnDiagnosticoDet .iconAnalisis{
+    color: #d62828;
+}
+#btnOptimizarAntivirus .iconAnalisis{
+    color:  #f77f00;
+}
+#btnMantFunction .iconAnalisis{
+    color: #fcbf49;
+}
+#btnMonitoreioAnalisis .iconAnalisis{
+    color: #00a8e8;
+}
+#btnHistFunction .iconAnalisis{
+    color: #007ea7;
+}
 .imgBtnAnalisis {
     display: flex;
     flex-direction: row;
@@ -688,17 +704,21 @@ body {
 .ultHist:hover {
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(42, 76, 89));
 }
-.imgMantGIF{
+
+.imgMantGIF {
     display: none;
     filter: drop-shadow(7px 7px 9px rgb(6, 11, 54));
 }
-.imgMant{
+
+#imgMant {
     filter: drop-shadow(7px 7px 9px rgb(6, 11, 54));
 }
-.imgDiagnosticoGIF{
+
+.imgDiagnosticoGIF {
     display: none;
     filter: drop-shadow(7px 7px 9px rgb(6, 11, 54));
 }
+
 /* Modo tablet. falta arreglar */
 @media (min-width: 768px) {}
 
@@ -772,6 +792,7 @@ body {
 
     .logo {
         width: 100%;
+        gap:0;
     }
 
     .logoIMG {
@@ -781,7 +802,7 @@ body {
     .nombreLogo {
         padding: 0px;
         text-align: center;
-        font-size: medium;
+        font-size: 18px;
         width: auto;
     }
 
@@ -860,6 +881,7 @@ body {
         display: flex;
         flex-direction: column;
         gap: 10px;
+        height: max-content;
     }
 
     #btnMonitoreo {
@@ -871,7 +893,10 @@ body {
         gap: 10px;
         flex-direction: column;
     }
-
+    #btnMonitoreo .textDiag{
+        font-size: 20px;
+        padding: 3px;
+    }
     .graficoMonit {
         display: flex;
         height: 80px;
@@ -924,14 +949,17 @@ body {
         justify-content: center;
         align-items: center;
     }
-    .img-container{
+
+    .img-container {
         width: 100%;
     }
+
     #robotimg {
         width: 80%;
         display: flex;
         filter: drop-shadow(1px 1px 12px rgba(42, 147, 189, 3));
     }
+
     .video-container {
         width: 100%;
         position: relative;
@@ -939,15 +967,19 @@ body {
         justify-content: center;
         filter: drop-shadow(1px 1px 12px rgba(42, 147, 189, 3));
     }
-    #robotGIF{
+
+    #robotGIF {
         display: flex;
         clip-path: circle(50% at 50% 50%);
-        object-fit: cover; /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
+        object-fit: cover;
+        /*ajustar el contenido (como imágenes o videos) dentro de un contenedor*/
         width: 80%;
     }
-    #audioRobot{
+
+    #audioRobot {
         display: none;
     }
+
     .microfono {
         border: 1px solid rgb(72, 100, 128);
         padding: 8px;
@@ -961,6 +993,7 @@ body {
 
     .analisisComp {
         display: flex;
+        gap: 10px;
         align-items: center;
         padding-right: 10px;
         padding-left: 10px;
@@ -979,7 +1012,9 @@ body {
         padding-right: 10px;
     }
 
-    #textPrimeroDiag {}
+    #btnAnalisiCompleto .textButton {
+        font-size: 18px;
+    }
 
     .diagnostico,
     .optimizar,
@@ -1015,7 +1050,9 @@ body {
         justify-content: center;
         font-size: 18px;
     }
-
+    .ultimo .btnUlt .textDiag{
+        font-size: 20px;
+    } 
     .imgDetDiag {
         display: flex;
         height: 90px;
@@ -1023,11 +1060,8 @@ body {
     }
 
     .imgDiagnostico,
-    .imgAntivirus,
-    .imgMant,
     .imgMantGIF,
-    .imgDiagnosticoGIF,
-    .imgHist {
+    .imgDiagnosticoGIF {
         height: 100%;
     }
 
