--- a/SIGTR/dashboard/templates/dashboard/client/notificaciones.html
+++ b/SIGTR/dashboard/templates/dashboard/client/notificaciones.html
@@ -2,7 +2,6 @@
 <link rel="stylesheet" href="{% static 'dashboard/css/notificaciones.css' %}">
 
 <!--NOTIFICACIONES DE ÉXTIO-->
-<div class="notificaciones">
+<div class="notificaciones" id="notificaciones">
 
 </div>
-<script src="{% static 'dashboard/js/clientes/notificaciones.js' %}"></script>
